# bn254-rs

./: Cargo.toml  FutureConsiderations.md  KeyManagement.md  LICENSE.md  README.md  cast-call.sh  foundry.toml  notes.md
.cargo/: config.toml
contracts/: BN254.sol  BN254Wrapper.sol
src/: g1.rs  g2.rs  hash.rs  lib.rs  main.rs  pairing.rs  utils.rs
src/web/: README.md  handlers.rs  hex_to_decimal.py  mod.rs  models.rs  players.json  populate_db.py  server.rs  store.rs
testdata/: operators.json  sign.json
tests/: integration.rs  operators.rs  prop_scalar_mul.rs  signature.rs  solidity.rs
