[package]
name = "bn254-rs"
version = "0.0.1"
edition = "2021"
authors = ["cds-amal <cds.sudama@gmail.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
sha3 = "0.10"
hex = "0.4"

[dev-dependencies]
anyhow = "1"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ethers = { version = "2", features = ["abigen"] }
num-bigint = "0.4"
num-traits = "0.2"
proptest = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
